# scriptomania

./: .gitignore  README.md  pyproject.toml
modules/unix/: pyproject.toml
modules/unix/src/scriptomania/unix/: sock.py
modules/unix/src/scriptomania/unix/dpkg/: find.py
nixpkg/: default.nix  ffbasic.nix  ffmpeg.nix
nixpkg/codecs/: libaom.nix
python/: README.md  find.py  pyproject.toml  sock.py
scripts/buildscripts/: README.md
scripts/buildscripts/ffmpeg/: README.md  build.sh  ulti.sh  update.sh
scripts/docker/: README.md
scripts/docker/plex/: plex.sh
scripts/ffmpeg/: README.md
scripts/ffmpeg/audibly_upset/: README.md
scripts/ffmpeg/audiobooking/: README.md  chapterbook_builder.sh  merge.sh
scripts/ffmpeg/chaptering/: README.md  chaptering.sh
scripts/ffmpeg/merger/: README.md  merge.sh
scripts/ffmpeg/vid2aac/: README.md  convert.sh
scripts/win/: README.md
scripts/win/setup/: README.md  bashic.ps1  winstall-9643.json
src/: tree.py
src/scriptomania/git/: workenv.py
template/: README.md
template/template/: README.md
