[project]
name = "scriptomania"
version = "0.1.0"
description = "Collection of scripts"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pygit2>=1.18.0",
    "docker>=7.1.0",
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "trio>=0.30.0",
    "scriptomania-unix; sys_platform == 'linux'",
    "toml>=0.10.2",
    "transformers>=4.53.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.uv.sources]
scriptomania-unix = { workspace = true }

[tool.uv.workspace]
members = [
    "modules/unix",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
scriptomania = "scriptomania.launcher.main:main"
workenv = "scriptomania.git.workenv:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
extend-exclude = [".venv"]
line-length = 320

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
ignore = [
    "NPY201", # we are fixed to numpy version 1.23.3
    "S404", # i know. I am aware.
    "COM812", # formatter conflict. and who uses this?
]

extend-select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "INT",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.pylint]
max-positional-args = 6
max-args = 6
