[project]
name = "scriptomania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
]

[project.scripts]
sock = "sock:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

