[project]
name = "scriptomania-unix"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = []

[project.scripts]
dpkg-find = "scriptomania.unix.dpkg.find:main"
dpkg-tree = "scriptomania.unix.dpkg.tree:main"
SOCk = "scriptomania.unix.sock:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
